--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -6,9 +6,10 @@
     xmlns:local="clr-namespace:ProiectRestaurantMobile"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <ShellContent Title="Welcome" ContentTemplate="{DataTemplate local:MainPage}"/>
+        <ShellContent Title="About" ContentTemplate="{DataTemplate local:AboutPage}"/>
+        <ShellContent Title="My Restaurant Lists" ContentTemplate="{DataTemplate local:ListEntryPage}"/>
+    </TabBar>
 
 </Shell>
