--- a/AboutPage.xaml
+++ b/AboutPage.xaml
@@ -2,13 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProiectRestaurantMobile.AboutPage"
-             Title="About">
-    <VerticalStackLayout Spacing="10" Margin="10">
-        <HorizontalStackLayout Spacing="10">
-            <Image Source="restaurant.png" SemanticProperties.Description="ABC" HeightRequest="64" />
-            <Label FontSize="22" FontAttributes="Bold" Text="DEF" VerticalOptions="End" />
-            <Label FontSize="22" Text="v1.0" VerticalOptions="End" />
-        </HorizontalStackLayout>
-        <Label Text="GHI" />
+             Title="About Page">
+    <VerticalStackLayout Spacing="25" Padding="30,0" VerticalOptions="Center">
+        <Image Source="restaurant.png" SemanticProperties.Description="Restaurant" HeightRequest="200" HorizontalOptions="Center" />
+        <Label FontSize="32" Text="This is a Restaurant Food App" HorizontalOptions="Center" />
     </VerticalStackLayout>
 </ContentPage>
